--- a/src/index.css
+++ b/src/index.css
@@ -2,24 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
 
+@import url("./tailwind.css");
+
 @import "slick-carousel/slick/slick.css";
 @import "slick-carousel/slick/slick-theme.css";
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@layer components {
-  .btn {
-    @apply mb-4 rounded bg-customPink px-4 py-2 text-white hover:bg-customBlue;
-  }
-  .container {
-    @apply mx-auto max-w-[1177px];
-  }
-  .flex-center {
-    @apply flex items-center justify-center;
-  }
-}
 
 /*
 * {
